Create calculator project

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,15 @@ blog/bin/
 
 #IntelliJ files
 **/*.iml
+**/*.iws
+**/*.ipr
 **/.idea
 **/.gradle
+
+HELP.md
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
